<resources>
    <string name="app_name">clase2</string>
    <string name="rojo">Rojo</string>
    <string name="azul">Azul</string>
    <string name="verde">Verde</string>
    <string name="amarillo">Amarillo</string>
    <string name="negro">Negro</string>
    <string name="mensaje">Dime tu color favorito</string>
    <string name="seleccion">Selecciona tu color favorito</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="resultado">Este es tu color favorito</string>

</resources>